@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.126 2005/04/27 10:55:20 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.127 2005/04/27 13:29:32 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -244,6 +244,10 @@ PH/40 The value set for $authenticated_id in an authenticator may not contain
       to spool files. There was no check on this. Now the value is run through
       the string_printing() function so that such characters are converted to
       printable escape sequences.
+
+PH/41 $message_linecount is a new variable that contains the total number of
+      lines in the message. Compare $body_linecount, which is the count for the
+      body only.
 
 
 A note about Exim versions 4.44 and 4.50
